# AI-Agent-Validator

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  conn_test.txt  error_out.txt  gunicorn.conf.py  hs_err.txt  pyproject.toml  ruff.toml  server_err.txt  server_out.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0000_initial_schema.py  1f7f4ccdbb39_add_auth_profile_fields.py  20260319_0001_add_safety_posture_fields.py  91d725d72296_add_new_tenant_fields.py  add_perf_indexes.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  worker.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  (+5 more)
backend/app/core/: __init__.py  rate_limit.py  redis_client.py
backend/app/models/: __init__.py  api_usage.py  audit_log.py  policy.py  policy_embedding.py  safety_config.py  tenant.py
backend/app/schemas/: __init__.py  audit.py  auth.py  dashboard.py  hooks.py  policies.py
backend/app/services/: __init__.py  algorand_writer.py  api_key_cache.py  audit_service.py  auth_service.py  perf_trace.py  policy_service.py
backend/contracts/: safebot_audit.py
backend/scripts/: db_check.py  load_validate_smoke.py  run_perf_profile.ps1
backend/tests/: __init__.py  conftest.py  test_audit.py  test_auth.py  test_cors.py  test_dashboard.py  test_hooks.py  test_password_reset.py  test_pii.py  test_policies.py  test_rate_limit.py  test_refresh_token.py  test_validate_abuse.py  test_validate_pipeline.py
(+81 files in other folders)
